# wikitrans

./: .gitlab-ci.yml  Cargo.toml  README.md
res/: asciinema-demo.json
src/: main.rs
