[package]
name = "wikitrans"
version = "0.1.0"
authors = ["timvisee <timvisee@gmail.com>"]
edition = "2018"
description = """
    Super simple CLI tool for translating words/terms using Wikipedia.
"""

[dependencies]
clap = "2.32"
skim = "0.5"
wikipedia = "0.3"

[patch.crates-io]
wikipedia = { path = "/home/timvisee/projects/wikipedia-rs" }
