[package]
name = "wikitrans"
version = "0.1.0"
authors = ["timvisee <timvisee@gmail.com>"]
edition = "2018"
description = """
    Super simple CLI tool for translating words/terms using Wikipedia.
"""

[dependencies]
clap = "2.32"
skim = "0.5"
wikipedia = "0.3"

[patch.crates-io]
wikipedia = { git = "https://github.com/seppo0010/wikipedia-rs", rev = "af861067c5af548ae2e93b6c69c77ca1e3c4dbc5" }
