[package]
name = "wikitrans"
version = "0.1.2"
authors = ["timvisee <timvisee@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://gitlab.com/timvisee/wikitrans"
repository = "https://gitlab.com/timvisee/wikitrans"
description = "Super simple CLI tool for translating words/terms using Wikipedia."
keywords = [
    "wiki",
    "translate",
    "wikipedia",
]
categories = [
    "command-line-utilities",
]
edition = "2018"

[dependencies]
clap = "2.32"
skim = "0.5"
wikipedia = "0.3.3"
